fixing modal on home page and darkening colours and contrast on home page to make it more readable

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -77,6 +77,7 @@ ul.navbar-nav a:focus{
   }
 }
 
+.no-padding {padding: 0 !important;}
 @media all and (max-width: 767px) {
 .no-padding-xs {padding: 0;}
 }
@@ -99,13 +100,20 @@ img {max-width: 100%; height: auto;}
 /*--- Buttons ---*/
 
 .btn-primary,
-a.rounded.button,
+a.button,
 input[type='submit'] {
  background: $purple;
  color: white;
+ font-weight: bold;
  border: $purple 1px solid;
  border-radius: 2em;
- padding: 0.25em 1em;;
+ padding: 0.25em 1em;
+ 
+ &:hover {
+ background: white;
+ color: $purple;
+ text-decoration: none;
+ }
 }
 
 a.rounded.button:hover,
@@ -123,6 +131,12 @@ input[type='submit']:hover {
 }
 
 .squares {
+
+.bg-color-1 { background-color: darken($color-1, 5%) } /* Purple */
+.bg-color-2 { background-color: darken($color-2, 5%) ; } /* Green */
+.bg-color-3 { background-color: darken($color-3, 5%) ; } /* Orange */
+.bg-color-4 { background-color: darken($color-4, 5%) ;} /* Blue */
+
  
   button {
    font-weight: bold;
@@ -149,6 +163,20 @@ input[type='submit']:hover {
         background-color: darken($color-4, 10%); color: white; 
       }  
    }
+}
+
+.modal-content img { 
+  max-height: 40vh;
+  width: 100%;
+}
+
+.modal-content h3 {
+ margin-top: 0;
+}
+
+.modal-content a.button {
+ margin-top: 0.5em;
+ display: inline-block;
 }
 
 /*--- Group Page ---*/
@@ -275,6 +303,3 @@ div.flash {
   z-index: 86;
 }
 
-.modal-content img { 
-  max-height: 40vh;
-}
