--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -133,8 +133,8 @@
   }
  .square img {
    position: absolute;
-   max-width: 100%;
    height: 100%;
+   width: 100%;
    opacity: 0.25;
   }
   
